calico-policies/private-network-isolation/calico-v3/us-south/allow-private-service-endpoint.yaml
# This policy allows outgoing network traffic from worker nodes in each zone
# of your cluster to the cluster master through the private service endpoint.
# Note that you must allow outgoing traffic for all of the zones within the region.

apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-private-service-endpoint
spec:
  egress:
  - action: Allow
    destination:
      nets:
      # Nets for US South: hou02, mex01, sao01, sjc03, sjc04, dal10, dal12, dal13
      - 166.9.12.140/32
      - 166.9.12.141/32
      - 166.9.12.142/32
      - 166.9.12.143/32
      - 166.9.12.144/32
      - 166.9.12.151/32
      - 166.9.12.193/32
      - 166.9.12.196/32
      - 166.9.12.26/32
      - 166.9.12.99/32
      - 166.9.13.31/32
      - 166.9.13.93/32
      - 166.9.13.94/32
      - 166.9.14.122/32
      - 166.9.14.125/32
      - 166.9.14.202/32
      - 166.9.14.204/32
      - 166.9.14.205/32
      - 166.9.14.95/32
      - 166.9.15.130/32
      - 166.9.15.69/32
      - 166.9.15.70/32
      - 166.9.15.71/32
      - 166.9.15.72/32
      - 166.9.15.73/32
      - 166.9.15.74/32
      - 166.9.15.75/32
      - 166.9.15.76/32
      - 166.9.16.113/32
      - 166.9.16.137/32
      - 166.9.16.149/32
      - 166.9.16.183/32
      - 166.9.16.184/32
      - 166.9.16.185/32
      - 166.9.16.38/32
      - 166.9.16.39/32
      - 166.9.16.5/32
      - 166.9.17.2/32
      - 166.9.17.35/32
      - 166.9.17.37/32
      - 166.9.17.39/32
      - 166.9.48.171/32
      - 166.9.48.124/32
      - 166.9.48.50/32
      - 166.9.48.76/32
      - 166.9.51.16/32
      - 166.9.51.54/32
      - 166.9.51.74/32
      - 166.9.51.106/32
      - 166.9.58.11/32
      - 166.9.58.16/32
      - 166.9.58.65/32
      - 166.9.58.104/32
      ports:
      - 20000:32767
      - 443
    protocol: UDP
    source: {}
  - action: Allow
    destination:
      nets:
      # Nets for US South: hou02, mex01, sao01, sjc03, sjc04, dal10, dal12, dal13
      - 166.9.12.140/32
      - 166.9.12.141/32
      - 166.9.12.142/32
      - 166.9.12.143/32
      - 166.9.12.144/32
      - 166.9.12.151/32
      - 166.9.12.193/32
      - 166.9.12.196/32
      - 166.9.12.26/32
      - 166.9.12.99/32
      - 166.9.13.31/32
      - 166.9.13.93/32
      - 166.9.13.94/32
      - 166.9.14.122/32
      - 166.9.14.125/32
      - 166.9.14.202/32
      - 166.9.14.204/32
      - 166.9.14.205/32
      - 166.9.14.95/32
      - 166.9.15.130/32
      - 166.9.15.69/32
      - 166.9.15.70/32
      - 166.9.15.71/32
      - 166.9.15.72/32
      - 166.9.15.73/32
      - 166.9.15.74/32
      - 166.9.15.75/32
      - 166.9.15.76/32
      - 166.9.16.113/32
      - 166.9.16.137/32
      - 166.9.16.149/32
      - 166.9.16.183/32
      - 166.9.16.184/32
      - 166.9.16.185/32
      - 166.9.16.38/32
      - 166.9.16.39/32
      - 166.9.16.5/32
      - 166.9.17.2/32
      - 166.9.17.35/32
      - 166.9.17.37/32
      - 166.9.17.39/32
      - 166.9.48.171/32
      - 166.9.48.124/32
      - 166.9.48.50/32
      - 166.9.48.76/32
      - 166.9.51.16/32
      - 166.9.51.54/32
      - 166.9.51.74/32
      - 166.9.51.106/32
      - 166.9.58.11/32
      - 166.9.58.16/32
      - 166.9.58.65/32
      - 166.9.58.104/32
      ports:
      - 20000:32767
      - 443
    protocol: TCP
    source: {}
  order: 1900
  selector: ibm.role == 'worker_private'
  types:
  - Egress
