calico-policies/private-network-isolation/calico-v3/us-south/allow-private-services.yaml
# This policy allows outgoing network traffic from worker nodes to other
# IBM Cloud services that support private service endpoints.
# The example nets in this policy are for IBM Cloud Container Registry,
# IBM Cloud Monitoring with Sysdig, and IBM Log Analysis with LogDNA.

apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-private-services
spec:
  egress:
  - action: Allow
    destination:
      nets:
      # IBM Cloud Container Registry: Global registry
      - 166.9.20.31/32
      - 166.9.22.22/32
      - 166.9.24.16/32
      # IBM Cloud Container Registry: US South & US East nets for your own registry
      - 166.9.12.227/32
      - 166.9.15.116/32
      - 166.9.16.244/32
      ports:
      - 443
      - 4443
    protocol: TCP
    source: {}
  - action: Allow
    destination:
      nets:
      # IBM Cloud Monitoring with Sysdig: US South nets
      - 166.9.13.52/32
      - 166.9.14.170/32
      - 166.9.17.11/32
      ports:
      - 6443
    protocol: TCP
    source: {}
  - action: Allow
    destination:
      nets:
      # IBM Log Analysis with LogDNA: US South nets
      - 166.9.12.13/32
      - 166.9.16.12/32
      - 166.9.14.3/32
      ports:
      - 443
    protocol: TCP
    source: {}
  order: 1900
  selector: ibm.role == 'worker_private'
  types:
  - Egress
